--- a/JS/mine.html
+++ b/JS/mine.html
@@ -1,3 +1,4 @@
+<!------------- BETTER VERSION ON rnielikki.github.io/mine ------------>
 <!DOCTYPE HTML>
 <head>
 	<title>Howto make a minesweeper</title>
